--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
 
 spring.servlet.multipart.max-file-size=10MB
+backend.base-url=http://localhost:8088/api/v1/images
+server.tomcat.max-http-header-size=16384
