--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,4 @@ spring.mvc.view.suffix=.html
 spring.servlet.multipart.max-file-size=10MB
 backend.base-url=http://localhost:8088/api/v1/images
 server.tomcat.max-http-header-size=16384
+spring.mvc.locale=bg_BG # Default locale (Bulgarian)
