--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Server Port
-server.port=8080
+server.port=${SERVER_PORT}
 
 # Static Resources
 spring.resources.static-locations=classpath:/static/
@@ -13,7 +13,7 @@ spring.servlet.multipart.enabled=true
 spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
 
-spring.servlet.multipart.max-file-size=10MB
-backend.base-url=http://localhost:8088/api/v1/images
-server.tomcat.max-http-header-size=16384
-spring.mvc.locale=bg_BG # Default locale (Bulgarian)
+spring.servlet.multipart.max-file-size=${MAX_FILE_SIZE}
+backend.base-url=${BACKEND_BASE_URL}
+server.tomcat.max-http-header-size=${MAX_HTTP_HEADER_SIZE}
+spring.mvc.locale=${MVC_LOCALE}
