change code for railway deploy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,6 @@ spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
 
 spring.servlet.multipart.max-file-size=10MB
-backend.base-url=http://localhost:8088/api/v1/images
+backend.base-url=lukeria-erp-api-production.up.railway.app
 server.tomcat.max-http-header-size=16384
 spring.mvc.locale=bg_BG # Default locale (Bulgarian)
