--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,6 @@ spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
 
 spring.servlet.multipart.max-file-size=10MB
-backend.base-url=${BACKENDBASEURL}
+backend.base-url=https://lukeria-erp-api-production.up.railway.app/api/v1
 server.tomcat.max-http-header-size=16384
 spring.mvc.locale=bg_BG # Default locale (Bulgarian)
