--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,4 @@ spring.servlet.multipart.max-file-size=${MAX_FILE_SIZE}
 backend.base-url=${BACKEND_BASE_URL}
 server.tomcat.max-http-header-size=${MAX_HTTP_HEADER_SIZE}
 spring.mvc.locale=${MVC_LOCALE}
+slack.bot.token=${SLACK_BOT_TOKEN}
