--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,19 @@
 # Server Port
-server.port=${SERVER_PORT}
-
+#server.port=${SERVER_PORT}
+server.port=8080
 # Static Resources
 spring.resources.static-locations=classpath:/static/
 
 # Template Engine (Thymeleaf)
-spring.thymeleaf.enabled=true
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-spring.servlet.multipart.enabled=true
-# Request Mapping
-spring.mvc.view.prefix=/templates/
-spring.mvc.view.suffix=.html
+#spring.thymeleaf.enabled=true
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
+#spring.servlet.multipart.enabled=true
 
-spring.servlet.multipart.max-file-size=${MAX_FILE_SIZE}
-backend.base-url=${BACKEND_BASE_URL}
-server.tomcat.max-http-header-size=${MAX_HTTP_HEADER_SIZE}
-spring.mvc.locale=${MVC_LOCALE}
+
+#spring.servlet.multipart.max-file-size=${MAX_FILE_SIZE}
+#backend.base-url=${BACKEND_BASE_URL}
+backend.base-url=http://localhost:8088/api/v1
+#server.tomcat.max-http-header-size=${MAX_HTTP_HEADER_SIZE}
+#spring.mvc.locale=${MVC_LOCALE}
 slack.bot.token=${SLACK_BOT_TOKEN}
