--- a/.github/workflows/frontend-build.yml
+++ b/.github/workflows/frontend-build.yml
@@ -74,12 +74,9 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Extract project version
-        id: extract_version
-        run: |
-          chmod +x ./mvnw
-          VERSION=$(./mvnw -q -Dexec.executable='echo' -Dexec.args='${project.version}' --non-recursive exec:exec || echo "latest")
-          echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
+      - name: Get short git SHA code
+        id: sha
+        run: echo "SHA=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -93,4 +90,4 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/lukeria-frontend:${{ steps.extract_version.outputs.VERSION }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/lukeria-frontend:${{ steps.sha.outputs.SHA }}
