--- a/.github/workflows/frontend-build-test.yml
+++ b/.github/workflows/frontend-build-test.yml
@@ -1,17 +1,17 @@
 name: frontend-build-and-deploy
 
-on:
-  workflow_dispatch:
-    inputs:
-      branch:
-        description: 'Branch to run the workflow on'
-        required: true
-        default: 'main'
 #on:
-#  push:
-#    branches:
-#      - test-images-loading-lazy
 #  workflow_dispatch:
+#    inputs:
+#      branch:
+#        description: 'Branch to run the workflow on'
+#        required: true
+#        default: 'main'
+on:
+  push:
+    branches:
+      - test-images-loading-lazy
+  workflow_dispatch:
 
 jobs:
   compile:
