--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,7 @@ spring.resources.static-locations=classpath:/static/
 
 
 #spring.servlet.multipart.max-file-size=${MAX_FILE_SIZE}
-#backend.base-url=${BACKEND_BASE_URL}
-backend.base-url=http://localhost:8088/api/v1
+backend.base-url=${BACKEND_BASE_URL}
 #server.tomcat.max-http-header-size=${MAX_HTTP_HEADER_SIZE}
 #spring.mvc.locale=${MVC_LOCALE}
 slack.bot.token=${SLACK_BOT_TOKEN}
