--- a/.github/workflows/frontend-build.yml
+++ b/.github/workflows/frontend-build.yml
@@ -3,7 +3,7 @@ name: frontend-build
 on:
   pull_request:
     types:
-      - closed
+      - open
     branches:
       - main
   workflow_dispatch:
@@ -93,3 +93,34 @@ jobs:
           file: Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/lukeria-frontend:${{ steps.sha.outputs.SHA }}
+
+  cleanup-images:
+    name: Cleanup old Docker images
+    runs-on: ubuntu-latest
+    needs: [ build-image ]
+    steps:
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Delete old images
+        run: |
+          # Install Docker Hub API client
+          curl -sSL https://github.com/docker/hub-tool/releases/latest/download/hub-tool-linux-amd64.tar.gz | tar xz
+          chmod +x hub-tool
+          
+          # Set up hub-tool authentication
+          ./hub-tool login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+          
+          # Get list of tags, sort by creation date, and keep only the last 5
+          REPO="${{ secrets.DOCKERHUB_USERNAME }}/lukeria-frontend"
+          TAGS_TO_DELETE=$(./hub-tool tag ls $REPO --sort created -f '{{.Tag}}' | head -n -5)
+          
+          # Delete old tags
+          for TAG in $TAGS_TO_DELETE; do
+            echo "Deleting tag: $TAG"
+            ./hub-tool tag rm $REPO:$TAG --force || true
+          done
+
