--- a/.github/workflows/frontend-build.yml
+++ b/.github/workflows/frontend-build.yml
@@ -105,25 +105,29 @@
             username: ${{ secrets.DOCKERHUB_USERNAME }}
             password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-        - name: Download and extract hub-tool
+        - name: Install Docker CLI and jq
           run: |
-            # Download and extract hub-tool
-            curl -sSL https://github.com/docker/hub-tool/releases/latest/download/hub-tool-linux-amd64.tar.gz -o hub-tool.tar.gz
-            tar -xzf hub-tool.tar.gz
-            chmod +x hub-tool
+            sudo apt-get update
+            sudo apt-get install -y docker.io jq
 
-        - name: Set up hub-tool authentication
+        - name: Fetch and delete old Docker tags
+          env:
+            DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+            DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
           run: |
-            ./hub-tool login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+            # Define the repository name
+            REPO="$DOCKERHUB_USERNAME/lukeria-frontend"
 
-        - name: Delete old images
-          run: |
-            # Get list of tags, sort by creation date, and keep only the last 5
-            REPO="${{ secrets.DOCKERHUB_USERNAME }}/lukeria-frontend"
-            TAGS_TO_DELETE=$(./hub-tool tag ls $REPO --sort created -f '{{.Tag}}' | head -n -5)
+            # Fetch all tags for the repository using Docker Hub API
+            TAGS=$(curl -s -H "Authorization: JWT $DOCKERHUB_TOKEN" \
+              "https://hub.docker.com/v2/repositories/$REPO/tags/?page_size=100" | \
+              jq -r '.results | sort_by(.last_updated) | .[].name')
 
-            # Delete old tags
+            # Get the list of tags to delete (all except the last 5)
+            TAGS_TO_DELETE=$(echo "$TAGS" | head -n -5)
+
+            # Delete old tags using Docker CLI
             for TAG in $TAGS_TO_DELETE; do
               echo "Deleting tag: $TAG"
-              ./hub-tool tag rm $REPO:$TAG --force || true
+              docker rmi $REPO:$TAG || true
             done
