--- a/.github/workflows/frontend-build.yml
+++ b/.github/workflows/frontend-build.yml
@@ -3,7 +3,8 @@
   on:
     pull_request:
       types:
-        - open
+        - opened
+        - reopened
       branches:
         - main
     workflow_dispatch:
