--- a/.github/workflows/frontend-build.yml
+++ b/.github/workflows/frontend-build.yml
@@ -1,97 +1,136 @@
-  name: frontend-build
+name: frontend-build
 
-  on:
-    pull_request:
-      types:
-        - opened
-        - reopened
-      branches:
-        - main
-    workflow_dispatch:
+on:
+  pull_request:
+    types:
+      - opened
+      - reopened
+    branches:
+      - main
+  workflow_dispatch:
 
-  jobs:
-    compile:
-      runs-on: ubuntu-latest
-      name: Compile project
-      steps:
-        - name: Check out repository code
-          uses: actions/checkout@v4
-          with:
-            fetch-depth: 0
+jobs:
+  compile:
+    runs-on: ubuntu-latest
+    name: Compile project
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-        - name: Set up Java
-          uses: actions/setup-java@v4
-          with:
-            java-version: '17'
-            distribution: 'liberica'
+      - name: Set up Java
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'liberica'
 
-        - name: Cache Maven dependencies
-          uses: actions/cache@v3
-          with:
-            path: ~/.m2/repository
-            key: maven-${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
-            restore-keys: |
-              maven-${{ runner.os }}-
+      - name: Cache Maven dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: maven-${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            maven-${{ runner.os }}-
 
-        - name: Build project
-          run: |
-            chmod +x ./mvnw
-            ./mvnw clean compile
+      - name: Build project
+        run: |
+          chmod +x ./mvnw
+          ./mvnw clean compile
 
-    build:
-      runs-on: ubuntu-latest
-      name: Build frontend
-      needs: [compile]
-      steps:
-        - name: Check out repository code
-          uses: actions/checkout@v4
-          with:
-            fetch-depth: 0
+  build:
+    runs-on: ubuntu-latest
+    name: Build frontend
+    needs: [compile]
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-        - name: Set up Java
-          uses: actions/setup-java@v4
-          with:
-            java-version: '17'
-            distribution: 'liberica'
+      - name: Set up Java
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'liberica'
 
-        - name: Cache Maven dependencies
-          uses: actions/cache@v3
-          with:
-            path: ~/.m2/repository
-            key: maven-${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
-            restore-keys: |
-              maven-${{ runner.os }}-
+      - name: Cache Maven dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: maven-${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            maven-${{ runner.os }}-
 
-        - name: Build project
-          run: |
-            chmod +x ./mvnw
-            ./mvnw clean package
+      - name: Build project
+        run: |
+          chmod +x ./mvnw
+          ./mvnw clean package
 
-    build-image:
-      name: Build Docker image
-      runs-on: ubuntu-latest
-      needs: [build]
-      steps:
-        - name: Check out repository code
-          uses: actions/checkout@v4
-          with:
-            fetch-depth: 0
+  sonar:
+    name: Run SonarCloud Analysis
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-        - name: Get short git SHA code
-          id: sha
-          run: echo "SHA=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+      - name: Set up Java
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'liberica'
 
-        - name: Login to Docker Hub
-          uses: docker/login-action@v3
-          with:
-            username: ${{ secrets.DOCKERHUB_USERNAME }}
-            password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
 
-        - name: Build and push Docker image
-          uses: docker/build-push-action@v5
-          with:
-            context: .
-            file: Dockerfile
-            push: true
-            tags: ${{ secrets.DOCKERHUB_USERNAME }}/lukeria-frontend:${{ steps.sha.outputs.SHA }}
+      - name: Cache Maven packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
 
+      - name: Build and analyze
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          chmod +x ./mvnw
+          ./mvnw -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
+            -Dsonar.projectKey=Ludogorie-Soft_lukeria-erp-api \
+            -Dsonar.coverage.exclusions=**/dtos/**,**/enums/**,**/models/**
+
+  build-image:
+    name: Build Docker image
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Get short git SHA code
+        id: sha
+        run: echo "SHA=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/lukeria-frontend:${{ steps.sha.outputs.SHA }}
