--- a/.github/workflows/frontend-build-test.yml
+++ b/.github/workflows/frontend-build-test.yml
@@ -141,19 +141,17 @@ jobs:
 
       - name: Delete old images
         run: |
-          # Install Docker Hub API client
-          curl -sSL https://github.com/docker/hub-tool/releases/latest/download/hub-tool-linux-amd64.tar.gz | tar xz
-          chmod +x hub-tool
-          
-          # Set up hub-tool authentication
-          ./hub-tool login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
-          
-          # Get list of tags, sort by creation date, and keep only the last 5
-          REPO="${{ secrets.DOCKERHUB_USERNAME }}/lukeria-frontend"
-          TAGS_TO_DELETE=$(./hub-tool tag ls $REPO --sort created -f '{{.Tag}}' | head -n -5)
-          
+          # Fetch all tags for the repository
+          TAGS=$(curl -s -H "Authorization: JWT ${{ secrets.DOCKERHUB_TOKEN }}" \
+            "https://hub.docker.com/v2/repositories/${{ secrets.DOCKERHUB_USERNAME }}/lukeria-backend/tags/?page_size=100" | \
+            jq -r '.results[].name')
+
+          # Sort tags by creation date (newest first) and keep the last 5
+          TAGS_TO_DELETE=$(echo "$TAGS" | sort -r | tail -n +6)
+
           # Delete old tags
           for TAG in $TAGS_TO_DELETE; do
             echo "Deleting tag: $TAG"
-            ./hub-tool tag rm $REPO:$TAG --force || true
+            curl -X DELETE -H "Authorization: JWT ${{ secrets.DOCKERHUB_TOKEN }}" \
+              "https://hub.docker.com/v2/repositories/${{ secrets.DOCKERHUB_USERNAME }}/lukeria-backend/tags/$TAG/"
           done
