add cleanup-images step

--- a/.github/workflows/frontend-build-test.yml
+++ b/.github/workflows/frontend-build-test.yml
@@ -143,7 +143,7 @@ jobs:
         run: |
           # Fetch all tags for the repository
           TAGS=$(curl -s -H "Authorization: JWT ${{ secrets.DOCKERHUB_TOKEN }}" \
-            "https://hub.docker.com/v2/repositories/${{ secrets.DOCKERHUB_USERNAME }}/lukeria-backend/tags/?page_size=100" | \
+            "https://hub.docker.com/v2/repositories/${{ secrets.DOCKERHUB_USERNAME }}/lukeria-frontend/tags/?page_size=100" | \
             jq -r '.results[].name')
 
           # Sort tags by creation date (newest first) and keep the last 5
@@ -153,5 +153,5 @@ jobs:
           for TAG in $TAGS_TO_DELETE; do
             echo "Deleting tag: $TAG"
             curl -X DELETE -H "Authorization: JWT ${{ secrets.DOCKERHUB_TOKEN }}" \
-              "https://hub.docker.com/v2/repositories/${{ secrets.DOCKERHUB_USERNAME }}/lukeria-backend/tags/$TAG/"
+              "https://hub.docker.com/v2/repositories/${{ secrets.DOCKERHUB_USERNAME }}/lukeria-frontend/tags/$TAG/"
           done
