make page about package details

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ backend.base-url=${BACKEND_BASE_URL}
 #server.tomcat.max-http-header-size=${MAX_HTTP_HEADER_SIZE}
 #spring.mvc.locale=${MVC_LOCALE}
 slack.bot.token=${SLACK_BOT_TOKEN}
+# application.properties
+spring.mvc.favicon.enabled=false
