add-aws.s3.bucket-url-in-ENV

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,4 @@ backend.base-url=${BACKEND_BASE_URL}
 #server.tomcat.max-http-header-size=${MAX_HTTP_HEADER_SIZE}
 #spring.mvc.locale=${MVC_LOCALE}
 slack.bot.token=${SLACK_BOT_TOKEN}
+aws.s3.bucket-url=${S3_BUCKET_URL}
