- add spring-boot-starter-actuator dependency to enable health monitoring  - configure Docker Compose healthcheck using wget command to verify /actuator/health endpoint    - Reduce final image size by leveraging lightweight version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ backend.base-url=${BACKEND_BASE_URL}
 #server.tomcat.max-http-header-size=${MAX_HTTP_HEADER_SIZE}
 #spring.mvc.locale=${MVC_LOCALE}
 slack.bot.token=${SLACK_BOT_TOKEN}
+
+#health check
+management.endpoints.health.show-details=always
